@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.3 2004/08/09 16:48:19 minskim Exp $
+$NetBSD: distinfo,v 1.4 2004/08/13 03:15:49 minskim Exp $
 
-SHA1 (ttf-alee_1.1.tar.gz) = 0fe0423466c3d22cea44c360896396f87ecdd8c4
-Size (ttf-alee_1.1.tar.gz) = 276919 bytes
+SHA1 (ttf-alee_1.3.tar.gz) = f2fa0e83bfea8b6e454c4e249012c4532abfd046
+Size (ttf-alee_1.3.tar.gz) = 278805 bytes
